// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`update-generation > update a single field 1`] = `
{
  "ExpressionAttributeNames": {
    "#update_createdAt": "createdAt",
    "#update_name": "name",
  },
  "ExpressionAttributeValues": {
    ":createdAt": "2012-02-18T00:00:00.000Z",
    ":name": "Alice",
  },
  "Key": {
    "pk": "user#123",
    "sk": "user@example.com",
  },
  "ReturnValues": "ALL_NEW",
  "TableName": "test-table",
  "UpdateExpression": "SET #update_name = :name, #update_createdAt = if_not_exists(#update_createdAt, :createdAt)",
}
`;

exports[`update-generation > update merges condition and update ExpressionAttributeNames 1`] = `
{
  "ConditionExpression": "#condition_age > :condition_0",
  "ExpressionAttributeNames": {
    "#condition_age": "age",
    "#update_createdAt": "createdAt",
    "#update_name": "name",
  },
  "ExpressionAttributeValues": {
    ":condition_0": 18,
    ":createdAt": "2012-02-18T00:00:00.000Z",
    ":name": "Alice",
  },
  "Key": {
    "pk": "user#123",
    "sk": "user@example.com",
  },
  "ReturnValues": "ALL_NEW",
  "TableName": "test-table",
  "UpdateExpression": "SET #update_name = :name, #update_createdAt = if_not_exists(#update_createdAt, :createdAt)",
}
`;

exports[`update-generation > update multiple fields 1`] = `
{
  "ExpressionAttributeNames": {
    "#update_age": "age",
    "#update_createdAt": "createdAt",
    "#update_name": "name",
  },
  "ExpressionAttributeValues": {
    ":age": 30,
    ":createdAt": "2012-02-18T00:00:00.000Z",
    ":name": "Alice",
  },
  "Key": {
    "pk": "user#123",
    "sk": "user@example.com",
  },
  "ReturnValues": "ALL_NEW",
  "TableName": "test-table",
  "UpdateExpression": "SET #update_name = :name, #update_age = :age, #update_createdAt = if_not_exists(#update_createdAt, :createdAt)",
}
`;

exports[`update-generation > update protects createdAt by default 1`] = `
{
  "ExpressionAttributeNames": {
    "#update_createdAt": "createdAt",
  },
  "ExpressionAttributeValues": {
    ":createdAt": "2024-01-01T00:00:00.000Z",
  },
  "Key": {
    "pk": "user#123",
    "sk": "user@example.com",
  },
  "ReturnValues": "ALL_NEW",
  "TableName": "test-table",
  "UpdateExpression": "SET #update_createdAt = if_not_exists(#update_createdAt, :createdAt)",
}
`;

exports[`update-generation > update removes field by setting null 1`] = `
{
  "ExpressionAttributeNames": {
    "#update_age": "age",
    "#update_createdAt": "createdAt",
    "#update_name": "name",
  },
  "ExpressionAttributeValues": {
    ":age": 10,
    ":createdAt": "2012-02-18T00:00:00.000Z",
  },
  "Key": {
    "pk": "user#123",
    "sk": "user@example.com",
  },
  "ReturnValues": "ALL_NEW",
  "TableName": "test-table",
  "UpdateExpression": "SET #update_age = :age, #update_createdAt = if_not_exists(#update_createdAt, :createdAt) REMOVE #update_name",
}
`;

exports[`update-generation > update with array key joined 1`] = `
{
  "ExpressionAttributeNames": {
    "#update_createdAt": "createdAt",
    "#update_name": "name",
  },
  "ExpressionAttributeValues": {
    ":createdAt": "2012-02-18T00:00:00.000Z",
    ":name": "Charlie",
  },
  "Key": {
    "pk": "user#abc-def",
    "sk": "test@example.com",
  },
  "ReturnValues": "ALL_NEW",
  "TableName": "test-table",
  "UpdateExpression": "SET #update_name = :name, #update_createdAt = if_not_exists(#update_createdAt, :createdAt)",
}
`;

exports[`update-generation > update with condition expression 1`] = `
{
  "ConditionExpression": "attribute_exists(#condition_name)",
  "ExpressionAttributeNames": {
    "#condition_name": "name",
    "#update_createdAt": "createdAt",
    "#update_name": "name",
  },
  "ExpressionAttributeValues": {
    ":createdAt": "2012-02-18T00:00:00.000Z",
    ":name": "Alice",
  },
  "Key": {
    "pk": "user#123",
    "sk": "user@example.com",
  },
  "ReturnValues": "ALL_NEW",
  "TableName": "test-table",
  "UpdateExpression": "SET #update_name = :name, #update_createdAt = if_not_exists(#update_createdAt, :createdAt)",
}
`;

exports[`update-generation > update with decrement expression 1`] = `
{
  "ExpressionAttributeNames": {
    "#update_age": "age",
  },
  "ExpressionAttributeValues": {
    ":age": 5,
  },
  "Key": {
    "pk": "user#123",
    "sk": "user@example.com",
  },
  "ReturnValues": "ALL_NEW",
  "TableName": "test-table",
  "UpdateExpression": "SET #update_age = #update_age - :age",
}
`;

exports[`update-generation > update with ifNotExists expression 1`] = `
{
  "ExpressionAttributeNames": {
    "#update_bio": "bio",
  },
  "ExpressionAttributeValues": {
    ":bio": "default bio",
  },
  "Key": {
    "pk": "user#123",
    "sk": "user@example.com",
  },
  "ReturnValues": "ALL_NEW",
  "TableName": "test-table",
  "UpdateExpression": "SET #update_bio = if_not_exists(#update_bio, :bio)",
}
`;

exports[`update-generation > update with increment expression 1`] = `
{
  "ExpressionAttributeNames": {
    "#update_age": "age",
  },
  "ExpressionAttributeValues": {
    ":age": 1,
  },
  "Key": {
    "pk": "user#123",
    "sk": "user@example.com",
  },
  "ReturnValues": "ALL_NEW",
  "TableName": "test-table",
  "UpdateExpression": "SET #update_age = #update_age + :age",
}
`;

exports[`update-generation > update with mixed plain values and expressions 1`] = `
{
  "ExpressionAttributeNames": {
    "#update_age": "age",
    "#update_createdAt": "createdAt",
    "#update_name": "name",
  },
  "ExpressionAttributeValues": {
    ":age": 1,
    ":createdAt": "2012-02-18T00:00:00.000Z",
    ":name": "Alice",
  },
  "Key": {
    "pk": "user#123",
    "sk": "user@example.com",
  },
  "ReturnValues": "ALL_NEW",
  "TableName": "test-table",
  "UpdateExpression": "SET #update_name = :name, #update_createdAt = if_not_exists(#update_createdAt, :createdAt), #update_age = #update_age + :age",
}
`;

exports[`update-generation > update with remove expression 1`] = `
{
  "ExpressionAttributeNames": {
    "#update_bio": "bio",
  },
  "Key": {
    "pk": "user#123",
    "sk": "user@example.com",
  },
  "ReturnValues": "ALL_NEW",
  "TableName": "test-table",
  "UpdateExpression": "REMOVE #update_bio",
}
`;
